# pupildetectionlinux

open_stereo_camera/: .stereo_camera.cpp.swp  CMakeLists.txt
pupildetection/: CMakeLists.txt  stereo_camera.cpp
